--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,11 @@ h1,h2,h3,h4,h5,h6,a,p, address{
 .slide-in-out.open {
   transform: translateX(0%);
 }
+
+.pageSection::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
