--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,3 +65,10 @@ h1,h2,h3,h4,h5,h6,a,p, address{
 body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
+
+.center-abs {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
