--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import url('https://fonts.cdnfonts.com/css/helvetica-neue-9');
+  @import url("https://use.typekit.net/tec1vhe.css");
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -38,8 +39,13 @@ body {
   width: 100%;
   display: block;
 }
+h1{
+  font-family: "adobe-garamond-pro", serif;
+font-weight: 400;
+font-style: normal;
+}
 
-h1,h2,h3,h4,h5,h6,a,p, address{
+h2,h3,h4,h5,h6,a, address{
   /* font-family: 'Playfair Display', serif; */
  font-family: 'Helvetica 65 Medium';
     font-weight: 400;
