--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,8 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import url('https://fonts.cdnfonts.com/css/helvetica-neue-9');
-  @import url("https://use.typekit.net/tec1vhe.css");
+  /* @import url("https://use.typekit.net/tec1vhe.css"); */
+@import url('https://fonts.cdnfonts.com/css/adobe-garamond-pro-2');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -40,7 +41,7 @@ body {
   display: block;
 }
 h1{
-  font-family: "adobe-garamond-pro", serif;
+font-family: "adobe-garamond-pro", serif;
 font-weight: 400;
 font-style: normal;
 }
