--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,6 +45,11 @@ font-family: "adobe-garamond-pro", serif;
 font-weight: 400;
 font-style: normal;
 }
+.titles{
+  font-family: 'Helvetica 65 Medium';
+    font-weight: 400;
+    font-style: normal;
+}
 
 h2,h3,h4,h5,h6,a, address{
   /* font-family: 'Playfair Display', serif; */
