--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,7 +95,7 @@ body::-webkit-scrollbar {
 }
 /* For mobile screens, use auto-fit. */
 .crewGrid {
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
 /* For larger screens (for example, if you want to switch at 1024px, but you can adjust this to your needs), 
@@ -103,6 +103,11 @@ use a media query to limit to 4 columns */
 @media screen and (min-width: 1350px) {
   .crewGrid {
     grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (max-width: 640px) {
+  .crewGrid {
+    grid-template-columns: 1fr;
   }
 }
 
