--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,9 +105,12 @@ use a media query to limit to 4 columns */
     grid-template-columns: repeat(4, 1fr);
   }
 }
-@media screen and (max-width: 640px) {
-  .crewGrid {
-    grid-template-columns: 1fr;
-  }
+
+.fade{
+   -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+  mask-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+
 }
 
+      
+     
